<resources>
    <string name="app_name" translatable="false">Whats Web</string>


    <string name="str_title_main_fragment" translatable="false">WhatsApp web</string>

    <string name="str_title_act_status_saver" translatable="false">Recent status</string>
    <string name="direct_chat" translatable="false">Direct Chat</string>
    <string name="status_saver" translatable="false">Status saver</string>
    <string name="saved_status" translatable="false">Saved status</string>
    <string name="facebook" translatable="false">Facebook</string>
    <string name="instagram" translatable="false">Instagram</string>
    <string name="no_items_available">No Items available</string>
    <string name="select_all">Select all</string>

    <string name="enter_phone_number">Enter phone number</string>
    <string name="send">Send</string>
    <string name="enter_any_message_optional">Enter any message (Optional)</string>
    <string name="clear">Clear</string>
    <!-- prod -->
    <!--
    <string name="mainBanner" translatable="false">ca-app-pub-5621307103177472/4596441043</string>
    <string name="mainFrgaBanner" translatable="false">ca-app-pub-5621307103177472/4596441043</string>
    <string name="directChatBanner" translatable="false">ca-app-pub-5621307103177472/4596441043</string>
    <string name="interstitial_ad_unit_id" translatable="false">ca-app-pub-5621307103177472/3477573137</string>
    <string name="app_open" translatable="false">ca-app-pub-5621307103177472/4599083118</string>
    -->


    <!-- debug -->
    <string name="mainBanner" translatable="false">ca-app-pub-3940256099942544/6300978111</string>
    <string name="mainFrgaBanner" translatable="false">ca-app-pub-3940256099942544/6300978111</string>
    <string name="directChatBanner" translatable="false">ca-app-pub-3940256099942544/6300978111</string>
    <string name="interstitial_ad_unit_id" translatable="false">ca-app-pub-3940256099942544/8691691433</string>
    <string name="app_open" translatable="false">ca-app-pub-3940256099942544/3419835294</string>


    <string name="enter_text_to_repeat">Enter text to repeat</string>
    <string name="number_of_times">Number of times</string>
    <string name="include_new_line_charecter">Include new line charecter</string>
    <string name="include_all_charecters">Include all charecters</string>
    <string name="generate">Generate</string>
    <string name="share">Share</string>
    <string name="copy">Copy</string>
    <string name="refresh">Refresh</string>
    <string name="go_full_screen">Go full screen</string>
    <string name="text_repeater">Text repeater</string>
    <string name="send_empty_message">Send empty message</string>
    <string name="rate_us">Rate us</string>
    <string name="telegram_web" translatable="false">Telegram web</string>
    <string name="preview">Preview</string>
    <string name="connecttointernerfirst">Connect to internet first</string>
    <string name="exit">Exit</string>
    <string name="phonenumbernotvalid">Phone number is not valid</string>
    <string name="errortryagainlater">error,please try later</string>
    <string name="pressAgaintoexit">Press again to exit</string>
    <string name="storagepermdenined">Permission denined,Reading external storage is necessary for the app to work properly</string>
    <string name="downloadfaild">Download failed</string>
    <string name="opening">Opening...</string>
    <string name="chooseaway">Choose a way:</string>
    <string name="failed">Failed</string>
    <string name="removing">Removing..please wait....</string>
    <string name="invalidtextinput">Invalid input,must be less than 1000 and greater than 0</string>
    <string name="generatedtext">Generated text</string>
    <string name="textcopied">Text copied to clipboard</string>
    <string name="sendindtextto">Sending text to:</string>
    <string name="invalidinputtext">Invalid input,must not be empty</string>
    <string name="saving">Saving..please wait....</string>
    <string name="title_activity_offline_chat">offlineChatActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>