<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/whatsback"
    tools:context=".TextRepeater">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="@dimen/activity_horizontal_margin">

            <EditText
                android:id="@+id/textToCopy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:ems="10"
                android:gravity="start|top"
                android:hint="@string/enter_text_to_repeat"
                android:inputType="textMultiLine"
                android:outlineProvider="background"
                android:fontFamily="@font/dancing_script"
                 />

            <EditText
                android:id="@+id/noOfTimes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:ems="10"
                android:hint="@string/number_of_times"
                android:inputType="number"
                android:fontFamily="@font/dancing_script"
                android:outlineProvider="background"
                 />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="16dp"
                android:orientation="vertical"
                android:visibility="visible">

                <CheckBox
                    android:id="@+id/includeNewLine"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    android:fontFamily="@font/dancing_script"
                    android:text="Repeat line by line" />

            </LinearLayout>

            <Button
                android:id="@+id/generate"
                android:fontFamily="@font/dancing_script"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:text="@string/generate" />

            <com.google.android.gms.ads.AdView
                android:id="@+id/adview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="16dp"
                app:adSize="BANNER"
                app:adUnitId="@string/banner"></com.google.android.gms.ads.AdView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/share"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="4dp"
                    android:layout_weight="5"
                    android:enabled="false"
                    android:fontFamily="@font/dancing_script"
                    android:text="@string/share"
                    app:icon="@drawable/ic_menu_share" />

                <Button
                    android:id="@+id/copy"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/dancing_script"
                    android:layout_margin="4dp"
                    android:layout_weight="5"
                    android:enabled="false"
                    android:text="@string/copy"
                    app:icon="?attr/actionModeCopyDrawable" />
            </LinearLayout>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:background="@color/teal_200"
                android:padding="4dp"
                app:cardBackgroundColor="#03A9F4"
                app:cardCornerRadius="6dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:layout_marginBottom="8dp"
                    android:text="@string/preview"
                    android:fontFamily="@font/dancing_script"
                    android:textColor="@color/white" />

                <TextView
                    android:id="@+id/generatedText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:padding="4dp"
                    android:fontFamily="@font/dancing_script"
                    android:textColor="@color/white"
                    tools:text="jjjjg" />
            </androidx.cardview.widget.CardView>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>